--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Основной файл index.html</title>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <main>
